--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     justify-content: center;
     font-family: 'Lexend Deca', sans-serif;
     font-size: 1.5rem;
+    background-color: hsl(0, 0%, 95%);
 }
 
 .cards-container {
